# BLAST

./: .gitignore  CMakeLists.txt  Makefile  README.md  blast  blast_test  conanfile.txt  debug_fix.cpp  run.sh  test_yaml.cpp
.claude/: settings.local.json
.claude/agents/: code-optimizer.md
config/: CO2_5.yaml  CO2_5_isothermal.yaml  CO2_5_reconstruction.yaml  CO2_5_reconstruction_v2.yaml  CO2_5_simple.yaml  CO2_5_test.yaml  CO2_8.yaml  N2_1.yaml  air_5.yaml  boundary_layer_auto.yaml  boundary_layer_auto_tout.yaml  catalysis.xml  config_50points.yaml  config_new_standard.yaml  default.yaml  sr71.yaml  test_base.yaml  test_conflict.yaml
config/convert/: generate_config.py
config/surface_chemistry/: CO2_5_gamma.xml
docs/: OUTPUT_SYSTEM.md
include/blast/boundary_layer/: catalysis_reconstruction.hpp  edge_reconstruction.hpp
include/blast/catalysis/: catalysis_interface.hpp  gasp2_catalysis.hpp  mutation_catalysis.hpp
include/blast/core/: application_runner.hpp  application_types.hpp  configuration_loader.hpp  constants.hpp  containers.hpp  environment_manager.hpp  exceptions.hpp  output_manager.hpp  simulation_runner.hpp
include/blast/io/: abacus_generator.hpp  abaque_generator.hpp  config_manager.hpp  config_types.hpp  gsi_manager.hpp  yaml_parser.hpp
include/blast/thermophysics/: hybrid_mixture.hpp  mixture_interface.hpp  mutation_mixture.hpp
libs/GASP2/: .gitignore  AGENTS.md  CMakeLists.txt  CMakeLists2.txt  CMakeLists_coupling.txt  README.md  test_co2_5  test_co2_5.cpp
libs/GASP2/include/gasp2/: gasp2.hpp  types.hpp
libs/GASP2/include/gasp2/catalysis/finite_rate/: finite_rate.hpp  finite_rate_flux_computation.hpp  finite_rate_input_parser.hpp  finite_rate_reaction_properties.hpp  finite_rate_reaction_validation.hpp  steady_surface_coverage.hpp  stoichiometry.hpp  types.hpp
libs/GASP2/include/gasp2/catalysis/gamma/: bose_flux.hpp  gamma_build.hpp  gamma_core.hpp  gamma_dispatcher.hpp  gamma_input_parser.hpp  gamma_model.hpp  gamma_reaction_validation.hpp  rini_flux.hpp  types.hpp
libs/GASP2/inputs/: CO2_5_finite_rate.xml  CO2_5_finite_rate_simple.xml  CO2_5_gamma.xml  input.xml  input_gamma.xml
libs/GASP2/inputs/finite_rate/: input_er_bare_site.xml  input_invalid_adsdes_form.xml  input_invalid_adsorption_form.xml  input_invalid_desorption_form.xml  input_invalid_er_form.xml  input_invalid_fractional_coeff.xml  input_invalid_ion.xml  input_invalid_lh_form.xml  input_missing_adsorption.xml  input_missing_parameter.xml  input_typical_simple_finite_rate.xml  input_useless_parameter.xml
libs/GASP2/inputs/gamma_model/: input_bose_gamma.xml  input_bose_gamma_extra.xml  input_bose_gamma_no_first.xml  input_carbon_gamma.xml  input_charge_imbalance.xml  input_duplicate_reaction.xml  input_electron_reaction.xml  input_first_order.xml  input_gammaT.xml  input_gamma_consistent.xml  input_gamma_consistent_homogeneous.xml  input_gamma_consistent_no_first_order.xml  input_gamma_consistent_ref.xml  input_invalid_arrow.xml  input_invalid_gamma.xml  input_ion_balanced.xml  input_limiting_flux.xml  input_mass_inconsistent.xml  input_mixed_gamma.xml  input_mixed_given.xml  input_mixed_invalid_range.xml  input_mixed_invalid_sum.xml  input_non_catalytic.xml  input_rini_closure_fail.xml  input_rini_gamma.xml  input_rini_gamma_first_order.xml  input_rini_gamma_three.xml  input_supercatalytic.xml  input_supercatalytic_first_order.xml  input_trivial_reaction.xml  input_unnormalized.xml  input_wrong_surface.xml
libs/GASP2/src/: gasp2.cpp
libs/GASP2/src/catalysis/finite_rate/: finite_rate.cpp  finite_rate_flux_computation.cpp  finite_rate_input_parser.cpp  finite_rate_reaction_properties.cpp  finite_rate_reaction_validation.cpp  steady_surface_coverage.cpp  stoichiometry.cpp
libs/GASP2/src/catalysis/gamma/: bose_flux.cpp  gamma_build.cpp  gamma_core.cpp  gamma_dispatcher.cpp  gamma_input_parser.cpp  gamma_model.cpp  gamma_reaction_validation.cpp  rini_flux.cpp
libs/GASP2/src/utils/: input_models.cpp  input_models.hpp
libs/GASP2/tests/: main.cpp
libs/GASP2/tests/finite_rate/: test_er_bare_site.cpp  test_finite_rate.cpp  test_fractional_coeff.cpp  test_input_validation.cpp  test_invalid_reaction_forms.cpp  test_ion_rejection.cpp  test_missing_adsorption.cpp  test_missing_parameter.cpp  test_useless_parameter.cpp  test_valid_adsorption.cpp
libs/GASP2/tests/gamma_model/: test_bose_gamma.cpp  test_carbon_gamma.cpp  test_charge_balance.cpp  test_duplicate_reaction.cpp  test_electron_reaction.cpp  test_gamma_consistent.cpp  test_gasp2.cpp  test_input_validation.cpp  test_invalid_arrow.cpp  test_invalid_gamma.cpp  test_invalid_surface_model.cpp  test_ion_reaction.cpp  test_limiting_flux.cpp  test_mass_balance.cpp  test_mixed_gamma.cpp  test_non_catalytic.cpp  test_rini_closure_condition.cpp  test_rini_gamma.cpp  test_rini_gamma_three.cpp  test_supercatalytic.cpp  test_trivial_reaction.cpp
scripts/: generate_boundary_layer_config.py  postprocess_abacus.py  postprocess_abaque.py  postprocess_blast.py  postprocess_blast_temperatures.py
src/: CMakeLists.txt  main.cpp
src/boundary_layer/: catalysis_reconstruction.cpp  edge_reconstruction.cpp
src/boundary_layer/coefficients/: boundary_layer_coefficients.cpp  chemical_coefficients.cpp  coefficient_calculator.cpp  derivative_calculator.cpp  diffusion.cpp  heat_flux_calculator.cpp  thermodynamic_coefficients.cpp  transport_coefficients.cpp  xi_derivatives.cpp
src/boundary_layer/conditions/: boundary_interpolator.cpp
src/boundary_layer/equations/: continuity.cpp  energy.cpp  species.cpp  (+1 more)
src/catalysis/: gasp2_catalysis.cpp  mutation_catalysis.cpp
src/core/: application_runner.cpp  configuration_loader.cpp  environment_manager.cpp  output_manager.cpp  simulation_runner.cpp
src/io/: abacus_generator.cpp  abaque_generator.cpp  config_manager.cpp  gsi_manager.cpp  yaml_parser.cpp
src/thermophysics/: hybrid_mixture.cpp  mutation_mixture.cpp
test_outputs_avion/: simulation_20250715_191644.h5  test_output_20250715_190809.h5
tests/: CMakeLists.txt
tools/: Makefile  temp_enthalpy_converter  temp_enthalpy_converter.cpp
(+70 files in other folders)
